--- a/Configs/.config/hypr/hyprland.conf
+++ b/Configs/.config/hypr/hyprland.conf
@@ -63,7 +63,7 @@ env = GDK_SCALE,1
 # See https://wiki.hyprland.org/Configuring/Variables/
 
 input {
-    kb_layout = us
+    kb_layout = fr
     follow_mouse = 1
 
     touchpad {
@@ -72,7 +72,7 @@ input {
 
     sensitivity = 0
     force_no_accel = 1
-    numlock_by_default = true
+    numlock_by_default = false
 }
 
 # See https://wiki.hyprland.org/Configuring/Keywords/#executing
