fixed workspace related shorcuts to match generic name of keys in azerty layout

--- a/Configs/.config/hypr/keybindings.conf
+++ b/Configs/.config/hypr/keybindings.conf
@@ -94,16 +94,16 @@ bind = $mainMod, Down, movefocus, d
 bind = Alt, Tab, movefocus, d
 
 # Switch workspaces
-bind = $mainMod, 1, workspace, 1
-bind = $mainMod, 2, workspace, 2
-bind = $mainMod, 3, workspace, 3
-bind = $mainMod, 4, workspace, 4
-bind = $mainMod, 5, workspace, 5
-bind = $mainMod, 6, workspace, 6
-bind = $mainMod, 7, workspace, 7
-bind = $mainMod, 8, workspace, 8
-bind = $mainMod, 9, workspace, 9
-bind = $mainMod, 0, workspace, 10
+bind = $mainMod, ampersand, workspace, 1
+bind = $mainMod, eacute, workspace, 2
+bind = $mainMod, quotedbl, workspace, 3
+bind = $mainMod, apostrophe, workspace, 4
+bind = $mainMod, parenleft, workspace, 5
+bind = $mainMod, egrave, workspace, 6
+bind = $mainMod, minus, workspace, 7
+bind = $mainMod, underscore, workspace, 8
+bind = $mainMod, ccedilla, workspace, 9
+bind = $mainMod, agrave, workspace, 10
 
 # Switch workspaces to a relative workspace
 bind = $mainMod+Ctrl, Right, workspace, r+1
@@ -159,13 +159,13 @@ bind = $mainMod, S, togglespecialworkspace,
 bind = $mainMod, J, togglesplit
 
 # Move focused window to a workspace silently
-bind = $mainMod+Alt, 1, movetoworkspacesilent, 1
-bind = $mainMod+Alt, 2, movetoworkspacesilent, 2
-bind = $mainMod+Alt, 3, movetoworkspacesilent, 3
-bind = $mainMod+Alt, 4, movetoworkspacesilent, 4
-bind = $mainMod+Alt, 5, movetoworkspacesilent, 5
-bind = $mainMod+Alt, 6, movetoworkspacesilent, 6
-bind = $mainMod+Alt, 7, movetoworkspacesilent, 7
-bind = $mainMod+Alt, 8, movetoworkspacesilent, 8
-bind = $mainMod+Alt, 9, movetoworkspacesilent, 9
-bind = $mainMod+Alt, 0, movetoworkspacesilent, 10
+bind = $mainMod+Alt, ampersand, movetoworkspacesilent, 1
+bind = $mainMod+Alt, eacute, movetoworkspacesilent, 2
+bind = $mainMod+Alt, quotedbl, movetoworkspacesilent, 3
+bind = $mainMod+Alt, apostrophe, movetoworkspacesilent, 4
+bind = $mainMod+Alt, parenleft, movetoworkspacesilent, 5
+bind = $mainMod+Alt, egrave, movetoworkspacesilent, 6
+bind = $mainMod+Alt, minus, movetoworkspacesilent, 7
+bind = $mainMod+Alt, underscore, movetoworkspacesilent, 8
+bind = $mainMod+Alt, ccedilla, movetoworkspacesilent, 9
+bind = $mainMod+Alt, agrave, movetoworkspacesilent, 10
