added info: left original shortcut keys

--- a/Configs/.config/hypr/keybindings.conf
+++ b/Configs/.config/hypr/keybindings.conf
@@ -2,6 +2,9 @@
 # █▄▀ █▀▀ █▄█ █▄▄ █ █▄░█ █▀▄ █ █▄░█ █▀▀ █▀
 # █░█ ██▄ ░█░ █▄█ █ █░▀█ █▄▀ █ █░▀█ █▄█ ▄█
 
+# INFO: I did not modify the shortcuts keys, so for example, if a shortcut is SUPER + Q, it will still remain that way.
+# If you want shortcut keys to be in the same place as on the QWERTRY keyboard, I added the matching key in AZERTY next to the shortcut for easy copy-pasting.
+
 # See https://wiki.hyprland.org/Configuring/Keywords/
 #  &  https://wiki.hyprland.org/Configuring/Binds/
 
@@ -16,17 +19,17 @@ $browser = firefox
 
 # Window/Session actions
 bindd = $mainMod+Shift, P,Color Picker , exec, hyprpicker -a # Pick color (Hex) >> clipboard# 
-bind = $mainMod, Q, exec, $scrPath/dontkillsteam.sh # close focused window
+bind = $mainMod, Q, exec, $scrPath/dontkillsteam.sh # close focused window -> $mainMod, A,
 bind = Alt, F4, exec, $scrPath/dontkillsteam.sh # close focused window
 bind = $mainMod, Delete, exit, # kill hyprland session
-bind = $mainMod, W, togglefloating, # toggle the window between focus and float
-bind = $mainMod, G, togglegroup, # toggle the window between focus and group
+bind = $mainMod, W, togglefloating, # toggle the window between focus and float -> $mainMod, Z,
+bind = $mainMod, G, togglegroup, # toggle the window between focus and group 
 bind = Alt, Return, fullscreen, # toggle the window between focus and fullscreen
 bind = $mainMod, L, exec, swaylock # launch lock screen
 bind = $mainMod+Shift, F, exec, $scrPath/windowpin.sh # toggle pin on focused window
-bind = $mainMod, Backspace, exec, $scrPath/logoutlaunch.sh # launch logout menu
-bind = Ctrl+Alt, W, exec, killall waybar || (env reload_flag=1 $scrPath/wbarconfgen.sh) # toggle waybar and reload config
-#bind = Ctrl+Alt, W, exec, killall waybar || waybar # toggle waybar without reloading, this is faster
+bind = $mainMod, Backspace, exec, $scrPath/logoutlaunch.sh # launch logout menu 
+bind = Ctrl+Alt, W, exec, killall waybar || (env reload_flag=1 $scrPath/wbarconfgen.sh) # toggle waybar and reload config -> $mainMod, Z,
+#bind = Ctrl+Alt, W, exec, killall waybar || waybar # toggle waybar without reloading, this is faster -> Ctrl+Alt, Z,
 
 # Application shortcuts
 bind = $mainMod, T, exec, $term # launch terminal emulator
@@ -77,14 +80,14 @@ bind = $mainMod+Alt, Up, exec, $scrPath/wbarconfgen.sh n # next waybar mode
 bind = $mainMod+Alt, Down, exec, $scrPath/wbarconfgen.sh p # previous waybar mode
 bind = $mainMod+Shift, R, exec, pkill -x rofi || $scrPath/wallbashtoggle.sh -m # launch wallbash mode select menu
 bind = $mainMod+Shift, T, exec, pkill -x rofi || $scrPath/themeselect.sh # launch theme select menu
-bind = $mainMod+Shift, A, exec, pkill -x rofi || $scrPath/rofiselect.sh # launch select menu
+bind = $mainMod+Shift, A, exec, pkill -x rofi || $scrPath/rofiselect.sh # launch select menu -> $mainMod+Shift, Q,
 bind = $mainMod+Shift, X, exec, pkill -x rofi || $scrPath/themestyle.sh # launch theme style select menu
-bind = $mainMod+Shift, W, exec, pkill -x rofi || $scrPath/swwwallselect.sh # launch wallpaper select menu
+bind = $mainMod+Shift, W, exec, pkill -x rofi || $scrPath/swwwallselect.sh # launch wallpaper select menu -> $mainMod+Shift, Z,
 bind = $mainMod, V, exec, pkill -x rofi || $scrPath/cliphist.sh c # launch clipboard
 bind = $mainMod+Shift, V, exec, pkill -x rofi || $scrPath/cliphist.sh # launch clipboard Manager
 bind = $mainMod, K, exec, $scrPath/keyboardswitch.sh # switch keyboard layout
 bind = $mainMod, slash, exec, pkill -x rofi || $scrPath/keybinds_hint.sh c # launch keybinds hint
-bind = $mainMod+Alt, A, exec, pkill -x rofi || $scrPath/animations.sh # launch animations Manager
+bind = $mainMod+Alt, A, exec, pkill -x rofi || $scrPath/animations.sh # launch animations Manager -> $mainMod+Alt, Q,
 
 # Move/Change window focus
 bind = $mainMod, Left, movefocus, l
