added keybind to move current windows to next/previous workspace
bottom of config

--- a/Configs/.config/hypr/keybindings.conf
+++ b/Configs/.config/hypr/keybindings.conf
@@ -2,7 +2,7 @@
 # █▄▀ █▀▀ █▄█ █▄▄ █ █▄░█ █▀▄ █ █▄░█ █▀▀ █▀
 # █░█ ██▄ ░█░ █▄█ █ █░▀█ █▄▀ █ █░▀█ █▄█ ▄█
 
-# INFO: I did not modify the shortcuts keys, so for example, if a shortcut is SUPER + Q, it will still remain that way.
+# INFO: I did not modify the cuts keys, so for example, if a shortcut is SUPER + Q, it will still remain that way.
 # If you want shortcut keys to be in the same place as on the QWERTRY keyboard, I added the matching key in AZERTY next to the shortcut for easy copy-pasting.
 
 # See https://wiki.hyprland.org/Configuring/Keywords/
@@ -31,7 +31,7 @@ bind = $mainMod, Backspace, exec, $scrPath/logoutlaunch.sh # launch logout menu
 bind = Ctrl+Alt, W, exec, killall waybar || (env reload_flag=1 $scrPath/wbarconfgen.sh) # toggle waybar and reload config -> $mainMod, Z,
 #bind = Ctrl+Alt, W, exec, killall waybar || waybar # toggle waybar without reloading, this is faster -> Ctrl+Alt, Z,
 
-# Application shortcuts
+# Application cuts
 bind = $mainMod, T, exec, $term # launch terminal emulator
 bind = $mainMod, E, exec, $file # launch file manager
 bind = $mainMod, C, exec, $editor # launch text editor
@@ -172,3 +172,7 @@ bind = $mainMod+Alt, minus, movetoworkspacesilent, 7
 bind = $mainMod+Alt, underscore, movetoworkspacesilent, 8
 bind = $mainMod+Alt, ccedilla, movetoworkspacesilent, 9
 bind = $mainMod+Alt, agrave, movetoworkspacesilent, 10
+
+# Move focused window to next or previous worksapce
+bind = $mainMod+Shift, up, movetoworkspace, +
+bind = $mainMod+Shift, down, movetoworkspace, -
